--- a/css/medidor.css
+++ b/css/medidor.css
@@ -65,3 +65,8 @@
 .colorText {
     color: white !important;
 }
+
+.form-control:focus {
+    border-color: rgba(220, 53, 69, 0.7) !important;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 10px rgba(220, 53, 69, 0.6) !important;
+}
