--- a/css/medidor.css
+++ b/css/medidor.css
@@ -1,3 +1,7 @@
+:root {
+    --color-theme-input: rgba(220, 53, 69, 0.6);
+}
+
 #contenedor {
     margin-left: 5%;
     margin-right: 5%;
@@ -67,6 +71,6 @@
 }
 
 .form-control:focus {
-    border-color: rgba(220, 53, 69, 0.7) !important;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 10px rgba(220, 53, 69, 0.6) !important;
+    border-color: var(--color-theme-input) !important;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 10px var(--color-theme-input) !important;
 }
